--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -61,6 +61,10 @@ body {
           justify-content: space-between;
 }
 
+.noScroll {
+  overflow: hidden;
+}
+
 main {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
