--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -2306,7 +2306,9 @@ h2,
 .newPostCarousel__slider .newPostCarousel__info {
   display: block;
   padding: 60px 30px 0;
-  background-color: #00000080;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(10%, rgba(143, 143, 143, 0.8)), color-stop(80%, rgba(0, 0, 0, 0.8)));
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(143, 143, 143, 0.8) 10%, rgba(0, 0, 0, 0.8) 80%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(143, 143, 143, 0.8) 10%, rgba(0, 0, 0, 0.8) 80%);
   z-index: 1;
 }
 
