--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -353,9 +353,11 @@ h2,
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .newHeader .burgerBtn > span {
+  -webkit-tap-highlight-color: transparent;
   color: #fff;
   line-height: 1.31;
   display: inline-block;
@@ -365,6 +367,7 @@ h2,
 }
 
 .newHeader .burgerBtn__burger {
+  -webkit-tap-highlight-color: transparent;
   background-color: rgba(160, 115, 255, 0.52);
   position: relative;
 }
@@ -2495,7 +2498,9 @@ h2,
 .newPostCarousel__slider--small .newPostCarousel__info {
   display: block;
   padding: 60px 30px 0;
-  background-color: #00000080;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(255, 255, 255, 0)), color-stop(10%, rgba(143, 143, 143, 0.8)), color-stop(80%, rgba(0, 0, 0, 0.8)));
+  background: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, rgba(143, 143, 143, 0.8) 10%, rgba(0, 0, 0, 0.8) 80%);
+  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(143, 143, 143, 0.8) 10%, rgba(0, 0, 0, 0.8) 80%);
   z-index: 1;
 }
 
@@ -7768,6 +7773,7 @@ h2,
   }
 
   .newHeader .bigMenu__content .bigNav .menu-item .sub-menu__title {
+    text-align: left;
     display: block;
     margin-bottom: 11px;
     font-weight: 500;
