--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -265,10 +265,12 @@ h2,
 }
 
 .newHeader__logo img {
-  height: 100%;
-  width: 100%;
+  height: 140%;
+  width: 140%;
   -o-object-fit: contain;
      object-fit: contain;
+  position: relative;
+  top: -3px;
 }
 
 .newHeader .nav .menu {
