--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -5520,9 +5520,8 @@ main {
   }
 }
 
-.fly-style.newHeader .newHeader__logo {
-  -webkit-filter: grayscale(100%) brightness(1.5);
-          filter: grayscale(100%) brightness(1.5);
+.fly-style.newHeader .newHeader__logo .img-svg g path {
+  fill: #fff;
 }
 
 .fly-style.newHeader .newHeader__nav a {
@@ -5564,6 +5563,10 @@ main {
 
 .fly-style.newHeader .burgerBtn--active > span {
   color: #fff;
+}
+
+.fly-style.newHeader.newHeader--scroll {
+  background-color: #8b5c38;
 }
 
 .fly-style.newHeader.newHeader--scroll .newHeader__logo {
