--- a/webtune/css/style.css
+++ b/webtune/css/style.css
@@ -4109,14 +4109,16 @@ main {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 1440px;
+  margin-right: 0;
+  margin-left: 12.5vw;
+  width: 1080px;
 }
 
 .newPortfolio__content {
   margin-right: 0;
   margin-left: 12.5vw;
   max-width: 100%;
-  width: 25vw;
+  width: 360px;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -4255,10 +4257,9 @@ main {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  left: 25vw;
+  left: 360px;
   top: 0;
   height: 100vh;
-  width: 65.5vw;
   -webkit-transition: all .5s;
   -o-transition: all .5s;
   transition: all .5s;
@@ -4418,6 +4419,8 @@ main {
 }
 
 .newPortfolio__subMenu-item {
+  min-width: 360px;
+  max-width: 360px;
   -webkit-box-flex: 0;
       -ms-flex: 0 0 calc(25vw - .5px);
           flex: 0 0 calc(25vw - .5px);
@@ -4468,10 +4471,6 @@ main {
 
 .newPortfolio__subMenu-item > ul li:first-child a::before {
   display: none;
-}
-
-.newPortfolio__photo {
-  height: 246px;
 }
 
 .newPortfolio__photo img {
@@ -4591,6 +4590,7 @@ main {
 
 .newPortfolio__mobileArrows {
   display: none;
+  visibility: hidden;
 }
 
 .newContacts::before {
@@ -7389,10 +7389,6 @@ main {
     top: -70px;
   }
 
-  .newPortfolio__subMenu {
-    left: 300px;
-  }
-
   .newPortfolio__subMenu .slick-arrow {
     left: 35vw;
     bottom: 26px;
@@ -7709,6 +7705,14 @@ main {
             flex: 0 0 calc(30vw - 15px);
     margin-right: 15px;
   }
+
+  .newPortfolio__subMenu {
+    left: 300px;
+  }
+
+  .newPortfolio__subMenu-item {
+    min-width: auto;
+  }
 }
 
 @media (max-width: 800px) {
@@ -7718,58 +7722,6 @@ main {
 }
 
 @media (max-width: 769px) {
-  .newPortfolio__mobileArrows {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    position: absolute;
-    bottom: 0;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    width: calc(100% - 30px);
-    left: 15px;
-    bottom: 18px;
-  }
-
-  .newPortfolio__mobileArrows .newPortfolio__prevArrow,
-  .newPortfolio__mobileArrows .newPortfolio__nextArrow {
-    text-transform: uppercase;
-    font-size: 12px;
-    line-height: 600;
-    letter-spacing: 3px;
-    line-height: 15px;
-    color: #a073ff;
-    position: relative;
-  }
-
-  .newPortfolio__mobileArrows .newPortfolio__prevArrow::after,
-  .newPortfolio__mobileArrows .newPortfolio__nextArrow::after {
-    content: "";
-    position: absolute;
-    top: 3px;
-    border-top: 5px solid transparent;
-    border-bottom: 5px solid transparent;
-  }
-
-  .newPortfolio__mobileArrows .newPortfolio__prevArrow {
-    padding-left: 20px;
-  }
-
-  .newPortfolio__mobileArrows .newPortfolio__prevArrow::after {
-    left: 0;
-    border-right: 10px solid #a073ff;
-  }
-
-  .newPortfolio__mobileArrows .newPortfolio__nextArrow {
-    padding-right: 20px;
-  }
-
-  .newPortfolio__mobileArrows .newPortfolio__nextArrow::after {
-    right: 0;
-    border-left: 10px solid #a073ff;
-  }
-
   .newContacts__address {
     padding-bottom: 0;
   }
@@ -10061,6 +10013,60 @@ main {
 
   .newPortfolio__menu-item:first-child .newPortfolio__subMenu {
     display: block;
+  }
+}
+
+@media (max-width: 474px) {
+  .newPortfolio__mobileArrows {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: absolute;
+    bottom: 0;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    width: calc(100% - 30px);
+    left: 15px;
+    bottom: 18px;
+  }
+
+  .newPortfolio__mobileArrows .newPortfolio__prevArrow,
+  .newPortfolio__mobileArrows .newPortfolio__nextArrow {
+    text-transform: uppercase;
+    font-size: 12px;
+    line-height: 600;
+    letter-spacing: 3px;
+    line-height: 15px;
+    color: #a073ff;
+    position: relative;
+  }
+
+  .newPortfolio__mobileArrows .newPortfolio__prevArrow::after,
+  .newPortfolio__mobileArrows .newPortfolio__nextArrow::after {
+    content: "";
+    position: absolute;
+    top: 3px;
+    border-top: 5px solid transparent;
+    border-bottom: 5px solid transparent;
+  }
+
+  .newPortfolio__mobileArrows .newPortfolio__prevArrow {
+    padding-left: 20px;
+  }
+
+  .newPortfolio__mobileArrows .newPortfolio__prevArrow::after {
+    left: 0;
+    border-right: 10px solid #a073ff;
+  }
+
+  .newPortfolio__mobileArrows .newPortfolio__nextArrow {
+    padding-right: 20px;
+  }
+
+  .newPortfolio__mobileArrows .newPortfolio__nextArrow::after {
+    right: 0;
+    border-left: 10px solid #a073ff;
   }
 }
 
