--- a/optic/css/style.css
+++ b/optic/css/style.css
@@ -483,12 +483,8 @@ main {
   transition: all .5s;
 }
 
-.footer__social a:first-child span {
-  right: 2px;
-}
-
 .footer__social a:last-child span {
-  top: 3px;
+  right: 2px;
 }
 
 .footer__form {
@@ -888,10 +884,11 @@ main {
 }
 
 .products__item > p {
-  padding: 15px 34px;
+  padding: 15px 34px 15px;
   width: 360px;
   background-color: #f5f5f5;
   border-left: 5px solid transparent;
+  border-bottom: 0 solid transparent;
   color: #333;
   font-weight: 600;
   font-size: 20px;
@@ -1101,6 +1098,7 @@ main {
   -webkit-transition: all .5s;
   -o-transition: all .5s;
   transition: all .5s;
+  -webkit-appearance: none;
 }
 
 .clientCart__form form input[type='button']:hover {
@@ -1795,10 +1793,6 @@ main {
   }
 
   .see {
-    padding-top: calc(30px + 40 * (100vw / 1440));
-  }
-
-  .see {
     padding-bottom: calc(47px + 23 * (100vw / 1440));
   }
 
@@ -2285,10 +2279,6 @@ main {
   }
 
   .see {
-    padding-top: 70px;
-  }
-
-  .see {
     padding-bottom: 70px;
   }
 
@@ -2503,6 +2493,11 @@ main {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
+    gap: 0px;
+  }
+
+  .footer__social a {
+    margin: 0 12px;
   }
 
   .footer__column {
@@ -2557,6 +2552,10 @@ main {
 
   .see__video {
     left: -10px;
+  }
+
+  .see__video::before {
+    width: 80vw;
   }
 
   .where__menu {
@@ -2720,6 +2719,16 @@ main {
 
   .products__item:last-of-type {
     margin-right: 0;
+  }
+
+  .products__item > p {
+    padding: 15px 34px 10px;
+    border-left-width: 0;
+    border-bottom-width: 5px;
+  }
+
+  .products__item--active > p {
+    border-left-color: transparent;
   }
 
   .products__slider .slick-arrow {
@@ -3160,10 +3169,6 @@ main {
 
   .clientCart__form form input[type='button'] {
     margin-top: calc(13px + 37.4 * ((100vw - 320px) / 1440));
-  }
-
-  .see {
-    padding-top: calc(30px + 68 * ((100vw - 320px) / 1440));
   }
 
   .see {
